--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
+/*font family source*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600;800;900&display=swap");
 
-/*Variables*/
+/*root css properties*/
 :root {
   --fros-blue-color: #022640ff;
   --light-blue-color: #16c5ff;
@@ -13,7 +14,7 @@
   --box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.2) !important;
 }
 
-/*some resets*/
+/*some basic resets*/
 * {
   padding: 0;
   margin: 0;
@@ -51,15 +52,57 @@ a {
   color: var(--light-color);
 }
 
-/* button */
+/* button styling*/
 .btn,
 button {
   border: none;
   cursor: pointer;
 }
 .btn {
-  /* where i stopped */
+  padding: 0.9rem 4rem;
+  border-radius: 3rem;
+  display: inline-block;
+  background-color: var(--light-color);
+  font-weight: 500;
+  -webkit-box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
+  transition: var(--transition);
 }
+.btn-white {
+  color: var(--fros-blue-color);
+}
+.btn-light-blue {
+  background-color: var(--light-blue-color);
+  color: var(--light-color);
+}
+.btn-blue {
+  background-color: var(--fros-blue-color);
+  color: var(--light-color);
+}
+.btn-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.btn-group .btn {
+  width: 100%;
+}
+.btn-group .btn:first-child {
+  margin-bottom: 2rem;
+}
+.btn:hover {
+  -webkit-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
+}
+
+/*Container Styling*/
 .container {
   max-width: 95vw;
   margin: 0 auto;
@@ -70,11 +113,44 @@ button {
   align-items: center;
   justify-content: center;
 }
+.grid {
+  display: grid;
+}
 input {
   outline: 0;
 }
+.lead {
+  font-size: 25px;
+  text-transform: capitalize;
+}
+h1,
+h2,
+h3 {
+  text-transform: capitalize;
+  margin-top: 0;
+  line-height: 1.3;
+}
+.text {
+  opacity: 0.9;
+}
+.text-md {
+  font-size: 1.5rem;
+}
+.text-lg {
+  font-size: 2rem;
+  font-weight: 500;
+}
+.text-sm {
+  font-size: 1.3rem;
+}
+.py {
+  padding: 10.9rem 0;
+}
+.text-center {
+  text-align: center;
+}
 
-/* header */
+/* header styling*/
 .header {
   min-height: 100vh;
 }
@@ -120,7 +196,7 @@ button[class^="navbar"]:hover {
   z-index: 1000;
 }
 
-/* navbar show class */
+/* navbar display/show class */
 .navbar-show {
   transform: translateX(0);
 }
@@ -157,6 +233,41 @@ button[class^="navbar"]:hover {
   border-radius: 1.9rem !important;
   border: 2px solid var(--light-gray);
   padding: 0 1.5rem;
+}
+
+/* header inner */
+.header-inner {
+  padding-top: 16rem;
+}
+.header-inner-left h1 {
+  font-size: 4rem;
+  font-weight: 300;
+  margin-bottom: 0;
+}
+.header-inner-left h1 span {
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.header-inner-left .lead {
+  opacity: 0.9;
+}
+.header-inner-left .text {
+  margin: 5.8rem 0;
+  max-width: 500px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.header-inner-left .btn-group {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.header-inner-right {
+  margin-top: 6rem;
+}
+.header-inner-right img {
+  max-width: 520px;
+  margin: 0 auto;
 }
 
 /* Media Queries */
