nav-bar spacing

--- a/css/main.css
+++ b/css/main.css
@@ -344,6 +344,7 @@ button[class^="navbar"]:hover {
     transition: none;
   }
   .navbar-nav {
+    margin-right: 125px;
     display: flex;
   }
   .nav-item {
