integrating new logo1

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 /*root css properties*/
 :root {
-  --fros-blue-color: #022640ff;
+  --fros-blue-color: #b9b95c;
   --light-blue-color: #16c5ff;
   --dark-gray: #a1a1a0;
   --dark-color: #202020;
