--- a/css/main.css
+++ b/css/main.css
@@ -591,6 +591,54 @@ button[class^="navbar"]:hover {
   padding-bottom: 0;
 }
 
+/* contact section */
+.contact-left {
+  margin-bottom: 6rem;
+  height: 100%;
+}
+.contact-left iframe {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.contact-right {
+  padding: 5rem 4rem;
+}
+.contact-right form {
+  margin-top: 5rem;
+}
+.form-element .form-control {
+  width: 100%;
+  background-color: #3373dd;
+  border: none;
+  outline: 0;
+  padding: 1rem 1.6rem;
+  margin-bottom: 1.6rem;
+  color: var(--light-color);
+}
+.form-element .form-control::-webkit-input-placeholder {
+  color: var(--light-color);
+}
+.form-element .form-control::-moz-placeholder {
+  color: var(--light-color);
+}
+.form-element .form-control:-ms-input-placeholder {
+  color: var(--light-color);
+}
+.form-element .form-control::-ms-input-placeholder {
+  color: var(--light-color);
+}
+.form-element .form-control::placeholder {
+  color: var(--light-color);
+}
+.btn-submit {
+  margin-top: 4rem;
+}
+.btn-submit i {
+  margin-right: 2rem;
+}
+
 /* Media Queries */
 @media (min-width: 450px) {
   .navbar-collapse {
@@ -710,6 +758,12 @@ button[class^="navbar"]:hover {
   .package-service-inner {
     margin-bottom: 0;
   }
+  .contact .container {
+    grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 2.4rem;
+    -moz-column-gap: 2.4rem;
+    column-gap: 2.4rem;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -798,6 +852,9 @@ button[class^="navbar"]:hover {
   }
   .post-item {
     margin-bottom: 0;
+  }
+  .contact .container {
+    grid-template-columns: auto 514px;
   }
 }
 
