--- a/css/main.css
+++ b/css/main.css
@@ -442,6 +442,7 @@ button[class^="navbar"]:hover {
   margin: auto;
 }
 .banner-two-right .lead {
+  text-align: center;
   font-size: 2.2rem;
   margin-top: 6rem;
 }
@@ -928,6 +929,12 @@ button[class^="navbar"]:hover {
   .header-inner-right img {
     padding-left: 0;
     max-width: 647px !important;
+  }
+  .banner-two-right .btn-group {
+    margin-top: 6rem;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
   .services-inner {
     grid-template-columns: repeat(4, 1fr);
